# ComfyPanel

./: .gitignore  .runninghub_config  LICENSE  README.md  __init__.py  pyproject.toml  readme-custom_notes.md  requirements.txt  runninghub_config.json
custom/: user_config.js
default/: default_apps.json  prompt_templates.json
default/workflows/: AnyPreviewPause Note (example).json  GPT_Image2_(All_in_one).json  NanoBanana_(All_in_one).json
modules/: __init__.py  bizyair_webapp.py  execution_time.py  image.py  rh_workflow_bridge.py  runninghub_bridge.py  text.py  utils.py
modules/utility/: Pytorch_Fix_IntelMac.py  __init__.py  comfypanel_api.py  comfypanel_tunnel.py  image_utility.py  math_utility.py  type_utility.py
photoshop_plugin/: ComfyPanel.ccx  readme-photoshop_plugin.md
photoshop_plugin/ComfyPanel/: ComfyPanel.ccx  index.html  manifest.json
photoshop_plugin/ComfyPanel/default/: default_apps.json
photoshop_plugin/ComfyPanel/sdks/: png-sdk.js  ps-sdk.js
photoshop_plugin/ComfyPanel/webview/: main.css  ui.html
photoshop_plugin/ComfyPanel/webview/js/adapters/: cloud_bizyair_adapter.js  cloud_bizyair_modelzoo_adapter.js  cloud_nanobanana_adapter.js  cloud_runninghub_adapter.js  cloud_runninghub_modelzoo_adapter.js  comfyui_adapter.js  local_comfyui_adapter.js
photoshop_plugin/ComfyPanel/webview/js/core/: auth_manager.js  backend_manager.js  bridge_manager.js  config_manager.js  i18n.js  init.js  prompts_manager.js  state.js  supabase_manager.js  task_executor.js  tool_manager.js  utils.js  uxp_bridge.js
photoshop_plugin/ComfyPanel/webview/js/engines/: cloud_bizyair_api.js  cloud_nanobanana_api.js  cloud_runninghub_api.js  comfyui_api.js  comfyui_engine.js  local_comfyui_api.js  local_comfyui_engine.js
photoshop_plugin/ComfyPanel/webview/js/ui/: history.js  lora_selector.js  model3d_viewer.js  notifications.js  pano_viewer.js  preview_manager.js  primitives.js  renderer.js
web/: auto_mute.js  bizyair_webapp.js  cloud_workflow_bridge.js  comfypanel_bridge.js  comfypanel_widget_helper.js  dynamic_output_name.js  dynamic_ports.js  dynamic_ports_register.js  execution_time.js  flux_kontext.js  math_operation.js  preview_pause.js  primitive_plus.js  rh_webapp.js  show_text.js  switch_any_combo.js
