[project]
name = "comfypanel"
description = "ComfyPanel is a professional Photoshop plugin built for designers and AI developers. Acting as a central hub, it seamlessly bridges local ComfyUI computing power with cloud platforms (RunningHub, BizyAir) to deliver a high-performance Edge-Cloud Hybrid workflow."
version = "1.2.1"
license = { file = "LICENSE" }

dependencies = ["torch>=2.0.0", "torchvision", "numpy>=1.24.0", "Pillow>=9.0.0", "opencv-python>=4.8.0", "scipy>=1.10.0", "kornia>=0.7.0", "requests>=2.28.0", "typing-extensions>=4.0.0"]
keywords = ["comfyui", "custom-nodes", "ps", "photoshop", "photoshop plugin", "runninghub", "bizyair"]

[project.urls]
Repository = "https://github.com/Ginolazy/ComfyPanel"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Ginolazy/ComfyPanel/wiki"
"Bug Tracker" = "https://github.com/Ginolazy/ComfyPanel/issues"

[tool.comfy]
PublisherId = "gino"
DisplayName = "ComfyPanel"
Icon = "https://raw.githubusercontent.com/Ginolazy/ComfyPanel/refs/heads/main/photoshop_plugin/ComfyPanel/icons/ComfyPanel.svg"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

