[project]
name = "comfypanel"
description = "ComfyPanel — a Photoshop and ComfyUI plugin (including custom ComfyUI nodes) that brings local and cloud AI workflows into your creative workspace. Supports RunningHub and BizyAir, offers bidirectional sync between Photoshop and ComfyUI, and automatic recovery of asynchronous cloud results."
version = "1.2.6"
license = { file = "LICENSE" }

dependencies = ["torch>=2.0.0", "torchvision", "numpy>=1.24.0", "Pillow>=9.0.0", "opencv-python>=4.8.0", "scipy>=1.10.0", "kornia>=0.7.0", "requests>=2.28.0", "typing-extensions>=4.0.0"]
keywords = ["comfyui", "custom-nodes", "ps", "photoshop", "photoshop plugin", "runninghub", "bizyair", "comfyui photoshop", "photoshop comfyui", "AnyPreview"]

[project.urls]
Repository = "https://github.com/Ginolazy/ComfyPanel"
Documentation = "https://github.com/Ginolazy/ComfyPanel/wiki"
"Bug Tracker" = "https://github.com/Ginolazy/ComfyPanel/issues"

[tool.comfy]
PublisherId = "ginolazy"
DisplayName = "ComfyPanel"
Icon = "https://raw.githubusercontent.com/Ginolazy/ComfyPanel/refs/heads/main/photoshop_plugin/ComfyPanel/icons/ComfyPanel.svg"
includes = []

